force-app/main/default/objects/WOLI_Progress_Setting__mdt/WOLI_Progress_Setting__mdt.object-meta.xml
<CustomObject>
    <label>WOLI Progress Setting</label>
    <pluralLabel>WOLI Progress Settings</pluralLabel>
</CustomObject>