force-app/main/default/objects/WOLI_Progress_Setting__mdt/fields/Block_Count__c.field-meta.xml
<CustomField>
    <fullName>Block_Count__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Block Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>