force-app/main/default/objects/WOLI_Progress_Setting__mdt/fields/Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>Completed_Status__c</fullName>
    <defaultValue>&quot;Completed&quot;</defaultValue>
    <label>Completed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>