force-app/main/default/objects/WOLI_Progress_Setting__mdt/fields/Display_Format__c.field-meta.xml
<CustomField>
    <fullName>Display_Format__c</fullName>
    <label>Display Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocks</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>