force-app/main/default/objects/WOLI_Progress_Setting__mdt/fields/Update_Gantt_Label__c.field-meta.xml
<CustomField>
    <fullName>Update_Gantt_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Gantt Label</label>
    <type>Checkbox</type>
</CustomField>